--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,9 +21,8 @@ export const prerender = true;
             <h2 class="mb-4 text-5xl font-bold">🤝 Negotiate With Brands.</h2>
             <Paragraph>
               <code>Repbot</code> automatically negotiates higher rates from
-              brands on your behalf. You tell us your minimum rate and social
-              stats, and we'll use previous deal data to get you the best offer
-              possible.
+              brands on your behalf. We use previous deal data to get you the
+              best offer possible.
             </Paragraph>
             <Paragraph>
               Brands can still submit offers below industry standard and you can
@@ -59,29 +58,83 @@ export const prerender = true;
         </div>
       </div>
       <div class="wrap-balance container py-6">
-        <h2 class="mb-4 text-5xl font-bold">💪 Be Open For Business.</h2>
-        <Paragraph>
-          <code>Repbot</code> gives you an easy way to read and review your
-          inbound brand deals. When one catches your eye, all you have to do is
-          hit "Reply".
-        </Paragraph>
-        <Paragraph>
-          Then, we get out of the way and let you handle communication,
-          contracting, invoicing and payment with the tools you already use to
-          run your business.
-        </Paragraph>
+        <div class="flex flex-col gap-6 md:grid md:grid-cols-2 md:items-start">
+          <div>
+            <h2 class="mb-4 text-5xl font-bold">💪 Work The Way You Want.</h2>
+            <Paragraph>
+              <code>Repbot</code> integrates into your existing workflow. We
+              make it easy to receive, read and review your inbound brand deals.
+            </Paragraph>
+            <Paragraph>
+              Then, we get out of the way and let you handle communication,
+              contracting, invoicing and payment with the tools you already use.
+            </Paragraph>
+          </div>
+          <div>
+            <img src="/link.png" />
+          </div>
+        </div>
       </div>
       <div class="wrap-balance container py-6">
-        <h2 class="mb-4 text-5xl font-bold">🔥 And Fire Us Whenever.</h2>
-        <Paragraph>
-          <code>Repbot</code> exists so that you never have to sign with a
-          manager that will take 15% of your business in exchange for barely
-          managing your email inbox. But if better representation comes along,
-          we want you to take it.
-        </Paragraph>
-        <Paragraph>
-          <b>No fees. No contractural obligations. No early exit clauses.</b>
-        </Paragraph>
+        <div class="flex flex-col gap-6 md:grid md:grid-cols-2 md:items-start">
+          <div class="flex-grow">
+            <h2 class="mb-4 text-5xl font-bold">🔥 Fire Us Whenever.</h2>
+            <Paragraph>
+              <code>Repbot</code> exists so you never have to sign with a
+              manager takes 15% of your business and barely manages your inbox.
+              But if better representation comes along, we want you to take it.
+            </Paragraph>
+            <Paragraph>
+              <b>No fees. No contractural obligations. No early exit clauses.</b
+              >
+            </Paragraph>
+          </div>
+          <div class="flex-grow">
+            <svg
+              width="100%"
+              viewBox="0 0 737 604"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M537.173 116.493C533.064 101.553 538.768 85.6653 547.452 73.2994C547.544 73.3471 555.971 85.6424 553.263 88.9063C548.596 98.1388 546.617 109.975 552.447 119.055C560.432 128.92 573.538 131.906 584.83 136.558C593.155 139.841 602.388 143.308 607.469 151.031C612.197 160.925 616.924 170.818 621.652 180.712C617.01 181.651 612.252 181.38 607.554 181.239C603.426 173.054 599.773 164.481 595.348 156.536C585.755 149.088 573.256 147.08 562.512 141.738C551.223 137.011 540.133 128.955 537.173 116.493ZM561.272 148.49C565.412 150.114 569.598 151.624 573.682 153.382C572.717 161.484 574.605 170.133 580.424 176.064C589.57 186.043 604.147 188.539 617.228 187.803C634.065 186.694 650.316 180.627 664.683 171.928C679.518 162.575 693.045 148.966 697.342 131.616C702.452 109.421 684.215 106.009 687.583 101.286C688.618 97.8482 689.741 94.434 690.546 90.9346C699.387 96.0613 707.285 103.742 709.89 113.865C713.893 128.872 708.329 144.863 699.453 157.201C690.459 169.831 677.96 179.873 664.235 187.023C655.711 191.195 647.096 195.238 637.821 197.444C620.214 202.074 600.612 202.768 583.994 194.753C574.961 190.29 567.292 182.932 563.532 173.534C559.905 165.778 560.009 156.83 561.272 148.49ZM569.519 103.945L545.862 53.2453L557.733 47.6668C566.461 66.6299 575.594 85.4777 584.07 104.513C585.376 112.424 582.753 120.224 580.462 127.733C576.329 126.616 572.28 124.717 568.327 122.964C570.149 116.703 573.091 110.036 569.519 103.945ZM633.165 205.256L637.396 214.661L625.747 220.32L619.551 207.134C624.103 206.653 628.666 206.136 633.165 205.256ZM613.054 32.0705C613.413 32.2132 622.764 44.9349 616.342 44.5638C599.908 48.1628 583.83 56.4017 573.125 65.0596L567.488 53.0649C576.224 46.7048 591.3 37.0365 613.054 32.0705ZM668.847 95.5938C672.369 84.4435 676.042 71.8849 671.089 60.6751C666.806 52.3383 658.502 46.8643 649.552 44.4476C647.849 43.6914 640.638 29.8777 643.253 30.0875C653.894 31.3469 664.597 34.9344 672.622 42.1533C682.294 49.9598 687.536 62.6975 686.429 75.0829C685.992 90.3966 678.442 104.342 675.733 119.237C676.358 126.824 681.984 136.027 685.351 143.199C682.87 147.405 679.616 151.103 676.24 154.624C672.665 146.672 663.604 128.302 663.072 125.662C661.465 115.259 665.92 105.393 668.847 95.5938ZM697.789 169.668L704.906 184.811L693.045 190.385L687.786 179.195C691.18 176.085 694.594 172.983 697.789 169.668ZM628.798 17.7246L654.367 72.1342C657.553 75.7828 662.45 77.4178 666.303 79.9258C665.307 84.1199 664.386 88.3337 662.998 92.4256C655.699 89.1139 647.655 85.546 643.149 78.7135C634.226 59.8598 625.303 41.0059 616.38 22.152C619.655 21.112 626.225 17.5194 628.798 17.7246Z"
+                fill="currentColor"></path>
+              <path
+                d="M617.833 93.7944C613.59 98.01 612.169 102.865 614.582 107.404C616.287 110.426 619.341 112.525 622.815 112.985C627.043 113.353 631.137 111.573 634.068 108.66C638.128 104.103 643.07 100.036 645.764 94.4664C646.843 91.1592 646.492 87.0382 644.226 84.2565C641.024 80.2786 635.242 78.942 630.627 81.3734C626.13 85.1497 622.138 89.7182 617.833 93.7944Z"
+                fill="currentColor"></path>
+              <path
+                d="M648.76 124.486C645.052 128.17 643.096 133.556 645.509 138.095C647.389 141.41 651.236 144.009 655.217 143.61C660.024 143.931 663.673 140.619 666.72 137.569C669.834 134.474 674.08 129.636 676.724 125.107C677.734 121.782 677.422 117.722 675.153 114.948C671.951 110.971 666.169 109.634 661.554 112.065C657.057 115.841 653.065 120.41 648.76 124.486Z"
+                fill="currentColor"></path>
+              <path
+                d="M594.337 126.286L549.021 51L505 66.9547L573.621 227L628 203.068L594.337 126.286Z"
+                fill="#0F182A"></path>
+              <g clip-path="url(#clip0_0_1)">
+                <path
+                  d="M247.756 603.203C165.126 596.057 94.7871 521.159 95.0676 437.826C94.3852 416.773 57.7299 418.374 48.361 399.171C-14.4155 344.409 -16.7072 236.431 45.187 180.272C79.3205 148.354 128.521 148.042 171.197 135.729C305.877 105.202 440.182 72.8572 575.22 44C593.28 63.2523 595 95.179 606.451 119.394C616.263 151.092 630.689 181.729 637 214.273C612.518 233.1 580.701 242.599 553.264 257.447C501.851 281.57 450.511 305.849 399.167 330.12C445.588 389.614 446.382 479.799 398.385 538.67C363.418 584.233 304.762 608.848 247.756 603.203ZM280.31 582.449C356.748 576.064 419.373 503.03 413.47 426.446C411.698 347.861 338.299 280.578 259.926 285.053C184.25 285.778 116.737 352.292 115.862 428.091C110.519 504.036 172.924 575.616 248.429 582.406C259.011 583.59 269.724 583.611 280.31 582.449ZM251.605 561.947C185.784 556.474 131.266 494.492 135.872 428.316C137.224 359.722 201.448 301.467 269.731 305.816C339.297 306.721 399.467 372.765 392.384 442.324C390.168 513.375 321.766 570.158 251.605 561.947ZM254.299 504.803C254.299 492.762 254.299 480.721 254.299 468.68C237.616 451.043 222.342 472.532 205.894 479.682C181.767 487.982 169.856 503.258 196.633 517.792C208.117 525.343 254.767 557.386 254.299 530.745C254.299 522.098 254.299 513.45 254.299 504.803ZM285.215 539.832C310.759 534.472 338.899 518.871 350.487 496.422C326.847 488.281 302.559 452.408 277.722 467.809C271.678 473.98 276.758 488.194 275.083 497.525C275.083 511.992 275.083 526.459 275.083 540.925C278.492 541.069 281.878 540.43 285.215 539.832ZM201.106 458.343C210.189 453.106 219.272 447.869 228.355 442.631C228.735 432.601 230.61 421.71 218.091 419.107C201.007 409.232 183.987 399.245 166.814 389.526C152.393 416.532 153.706 450.866 165.966 478.572C177.696 471.857 189.393 465.087 201.106 458.343ZM364.832 473.627C374.796 447.417 375.424 415.195 362.241 390.522C340.945 400.94 320.908 413.841 300.21 425.429C299.9 435.408 298.285 446.147 310.657 448.743C327.855 458.638 344.824 468.958 362.342 478.28L364.832 473.627ZM272.362 446.79C301.415 424.956 243.613 403.052 249.549 437.783C251.942 447.857 263.865 451.015 272.362 446.79ZM243.17 404.941C259.329 402.497 253.238 386.976 254.299 375.407C250.827 358.617 266.322 316.475 237.086 330.002C213.02 336.289 191.352 351.243 176.664 371.287C197.764 383.282 218.437 396.088 240.058 407.122L243.17 404.941ZM323.958 387.774C342.163 380.091 362.57 368.898 336.903 354.283C320.677 339.853 294.512 325.882 275.083 328.606C275.083 352.148 275.083 375.69 275.083 399.231C293.219 417.297 305.428 394.446 323.958 387.774ZM97.632 403.316C111.461 319.44 195.687 255.18 280.319 265.197C320.183 267.526 356.376 288.166 385.864 313.616C425.071 295.632 464.041 277.093 502.683 257.926C485.19 203.124 466.206 148.804 447.898 94.2683C330.206 120.169 212.77 147.386 95.3404 174.505C23.9814 197.686 -0.493809 293.803 38.3382 354.373C50.5451 373.777 77.3579 406.346 97.632 403.316ZM569.138 227.164C588.744 215.074 629.495 211.678 606.138 181.433C592.747 143.355 580.004 105.035 566.001 67.1808C533.32 73.8145 500.771 81.2442 468.437 89.4012C486.168 142.7 503.567 196.317 523.336 248.833C538.618 241.641 553.873 234.392 569.138 227.164Z"
+                  fill="currentColor"></path>
+              </g>
+              <path
+                d="M120 154C120.833 136.5 111.5 99.3 67.5 90.5"
+                stroke="currentColor"
+                stroke-width="19"></path>
+              <path
+                d="M67 55L74.858 79.1844L100.287 79.1844L79.7145 94.1312L87.5725 118.316L67 103.369L46.4275 118.316L54.2855 94.1312L33.713 79.1844L59.142 79.1844L67 55Z"
+                fill="#FF6B00"></path>
+              <path
+                d="M84.9977 60.1865L79.7107 85.0598L101.733 97.7743L76.4431 100.432L71.1562 125.306L60.8132 102.075L35.5236 104.733L54.421 87.7179L44.0781 64.4873L66.1002 77.2018L84.9977 60.1865Z"
+                fill="#FFC700"></path>
+              <defs>
+                <clipPath id="clip0_0_1">
+                  <rect
+                    width="637"
+                    height="560"
+                    fill="white"
+                    transform="translate(0 44)"></rect>
+                </clipPath>
+              </defs>
+            </svg>
+          </div>
+        </div>
       </div>
     </div>
     <div
